--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-native": "0.71.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2"
   },
   "private": true
 }
